fix unpack + bernoulli features

--- a/bernoulli-nb.ipynb
+++ b/bernoulli-nb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(70000, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clean_data = comment_data['prep'].to_numpy()\n",
     "clean_labels = comment_data['subreddits'].to_numpy()\n",
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,20 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = np.array([[0,1,0],[1,0,1],[0,0,1],[1,1,1]])\n",
     "Y = np.array([6,7,6,6])\n",
@@ -303,8 +284,8 @@
     "        data.append(x)\n",
     "        labels.append(y)\n",
     "\n",
-    "    data = np.array(X)\n",
-    "    labels = np.array(Y)\n",
+    "    data = np.array(data)\n",
+    "    labels = np.array(labels)\n",
     "    \n",
     "    return (data, labels)"
    ]
@@ -326,13 +307,15 @@
     "    testing_data, testing_labels = unpack(test)\n",
     "    \n",
     "    # tokenize and remove min words on \"training set\"\n",
-    "    tfidf_vectorizer = TfidfVectorizer(tokenizer=tt.tokenize, ngram_range=(1,1), min_df=3)\n",
+    "    tfidf_vectorizer = TfidfVectorizer(tokenizer=tt.tokenize, ngram_range=(1,1), min_df=3, binary=True, use_idf=False, norm=None)\n",
     "    tfidf = tfidf_vectorizer.fit(training_data)\n",
     "    \n",
     "    # filter out bad words\n",
     "    training_vec = tfidf_vectorizer.transform(training_data).astype(np.float32).toarray()\n",
     "    validation_vec = tfidf_vectorizer.transform(validation_data).astype(np.float32).toarray()\n",
     "    testing_vec = tfidf_vectorizer.transform(testing_data).astype(np.float32).toarray()\n",
+    "    \n",
+    "    print(np.unique(training_vec))\n",
     "    \n",
     "    nb.fit(training_vec,training_labels)\n",
     "    \n",
@@ -341,15 +324,23 @@
     "        result = (nb.predict(vec))\n",
     "        if nb.classes[result] == validation_labels[idx]:\n",
     "            num_correct += 1\n",
-    "    print(\"Validation accuracy is: \" , num_correct/(validation_vec.shape[0]))\n",
+    "#         print(\"Current accuracy is: \" , num_correct/(idx+1))\n",
+    "    print(\"Fold \", idx+1, \" Validation accuracy is: \" , num_correct/(validation_vec.shape[0]))\n",
     "    \n",
     "    num_correct = 0\n",
     "    for idx, vec in enumerate(testing_vec):\n",
     "        result = (nb.predict(vec))\n",
     "        if nb.classes[result] == testing_labels[idx]:\n",
     "            num_correct += 1\n",
-    "    print(\"Testing accuracy is: \" , num_correct/(testing_vec.shape[0]))"
+    "    print(\"Fold \", idx+1, \" Testing accuracy is: \" , num_correct/(testing_vec.shape[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
