--- a/multinomial-nb.ipynb
+++ b/multinomial-nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "\n",
     "#base classifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.feature_selection import SelectPercentile, f_classif\n",
     "\n",
     "\n",
     "# Math and plots\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,8 @@
     "LEMMATIZE = False\n",
     "STEM = False\n",
     "\n",
-    "# flag selection"
+    "# flag selection\n",
+    "PREDICT_TEST_SET = False"
    ]
   },
   {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -243,30 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # count vectors w/ norm\n",
-    "# counter = CountVectorizer(min_df=1, max_df=0.05, ngram_range=(1,1))\n",
-    "# training_counts = counter.fit_transform(training_data)\n",
-    "# testing_counts = counter.transform(testing_data)\n",
-    "\n",
-    "# print(training_counts.shape)\n",
-    "# print(testing_counts.shape)\n",
-    "\n",
-    "# # tokenize and remove min words on \"training set\"\n",
-    "# tfidf = TfidfTransformer()\n",
-    "# training_vec = tfidf.fit_transform(training_counts)\n",
-    "# testing_vec = tfidf.transform(testing_counts)\n",
-    "\n",
-    "# print(training_vec.shape)\n",
-    "# print(testing_vec.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +283,6 @@
    ],
    "source": [
     "# reduce feature space by percentile\n",
-    "from sklearn.feature_selection import SelectPercentile, f_classif\n",
     "selector = SelectPercentile(f_classif, percentile=90)\n",
     "training_vec = selector.fit_transform(training_vec, training_labels)\n",
     "testing_vec = selector.transform(testing_vec)\n",
@@ -322,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -355,11 +333,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Fold Cross-Validation Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# leverages pandas for fast csv load but operates in numpy\n",
+    "class kFold():\n",
+    "    def __init__(self, data, numFolds=5):\n",
+    "        self.data = data\n",
+    "        self.numFolds = numFolds\n",
+    "        self.splits = []\n",
+    "        \n",
+    "    def generateSplits(self):\n",
+    "        np.random.shuffle(self.data)\n",
+    "        \n",
+    "        folds = []\n",
+    "        splitPoint = self.data.shape[0] // (self.numFolds)  #breakpoint index jump\n",
+    "        \n",
+    "        for i in range(self.numFolds - 1):\n",
+    "            folds.append(self.data[i*splitPoint:(i+1)*splitPoint, :])\n",
+    "            \n",
+    "        folds.append(self.data[(i+1)*splitPoint:,:]) #get extra points in last batch\n",
+    "        \n",
+    "        # create split permutations 80/10/10\n",
+    "        foldDivisor = len(folds[0]) // 2\n",
+    "        for i in range(self.numFolds):\n",
+    "            train = []\n",
+    "            for k in range(self.numFolds):\n",
+    "                if i == k:\n",
+    "                    validation = folds[i][:foldDivisor] \n",
+    "                    test = folds[i][foldDivisor:] \n",
+    "                else:\n",
+    "                    train.append(folds[k])\n",
+    "            \n",
+    "            train = np.vstack(train) # adapt dims\n",
+    "            self.splits.append((train, validation, test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper function: unpacks data that was zipped together when we shuffled\n",
+    "def unpack(subset):\n",
+    "    data = []\n",
+    "    labels = []\n",
+    "\n",
+    "    for x,y in subset:\n",
+    "        data.append(x)\n",
+    "        labels.append(y)\n",
+    "\n",
+    "    data = np.array(data)\n",
+    "    labels = np.array(labels)\n",
+    "    \n",
+    "    return (data, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(70000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reformat\n",
+    "clean_data = comment_data['comments'].to_numpy()\n",
+    "clean_labels = comment_data['subreddits'].to_numpy()\n",
+    "\n",
+    "#pack tuple\n",
+    "comments = []\n",
+    "for idx in range(clean_data.shape[0]):\n",
+    "    item = (clean_data[idx], clean_labels[idx])\n",
+    "    comments.append(item)\n",
+    "comments = np.asarray(comments)\n",
+    "print(comments.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(56000, 2)\n",
+      "(7000, 2)\n",
+      "(7000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make splits\n",
+    "commentFolds = kFold(comments)\n",
+    "commentFolds.generateSplits()\n",
+    "splits = commentFolds.splits\n",
+    "trainex, valex, testex = splits[0]\n",
+    "print(trainex.shape)\n",
+    "print(valex.shape)\n",
+    "print(testex.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold  1  Validation accuracy is:  0.5731428571428572\n",
+      "Fold  1  Testing accuracy is:  0.5652857142857143\n",
+      "Fold  2  Validation accuracy is:  0.5735714285714286\n",
+      "Fold  2  Testing accuracy is:  0.575\n",
+      "Fold  3  Validation accuracy is:  0.555\n",
+      "Fold  3  Testing accuracy is:  0.5805714285714285\n",
+      "Fold  4  Validation accuracy is:  0.5724285714285714\n",
+      "Fold  4  Testing accuracy is:  0.5752857142857143\n",
+      "Fold  5  Validation accuracy is:  0.5727142857142857\n",
+      "Fold  5  Testing accuracy is:  0.5637142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s, split in enumerate(splits):\n",
+    "    \n",
+    "    # unpack segements\n",
+    "    train, val, test = split\n",
+    "    \n",
+    "    # unpack data and labels\n",
+    "    training_data, training_labels = unpack(train)\n",
+    "    validation_data, validation_labels = unpack(val)\n",
+    "    testing_data, testing_labels = unpack(test)\n",
+    "    \n",
+    "    # tokenize and remove min words on \"training set\"\n",
+    "    tfidf = TfidfVectorizer(sublinear_tf=True, smooth_idf=False)\n",
+    "    training_vec = tfidf.fit_transform(training_data)\n",
+    "    validation_vec = tfidf.transform(validation_data)\n",
+    "    testing_vec = tfidf.transform(testing_data)\n",
+    "    \n",
+    "    # reduce feature space by percentile\n",
+    "    selector = SelectPercentile(f_classif, percentile=90)\n",
+    "    training_vec = selector.fit_transform(training_vec, training_labels)\n",
+    "    validation_vec = selector.transform(validation_vec)\n",
+    "    testing_vec = selector.transform(testing_vec)\n",
+    "\n",
+    "    # fit model on training set\n",
+    "    nb = MultinomialNB(alpha=0.1, fit_prior=True)\n",
+    "    nb.fit(training_vec,training_labels)\n",
+    "    \n",
+    "    num_correct = 0\n",
+    "    results = nb.predict(validation_vec)\n",
+    "    for idx, result in enumerate(results):\n",
+    "        score = labels.index(validation_labels[idx])\n",
+    "        if result == validation_labels[idx]:\n",
+    "            num_correct += 1\n",
+    "    print(\"Fold \", s+1, \" Validation accuracy is: \" , num_correct/(validation_vec.shape[0]))\n",
+    "    \n",
+    "    num_correct = 0\n",
+    "    results = nb.predict(testing_vec)\n",
+    "    for idx, result in enumerate(results):\n",
+    "        score = labels.index(testing_labels[idx])\n",
+    "        if result == testing_labels[idx]:\n",
+    "            num_correct += 1\n",
+    "    print(\"Fold \", s+1, \" Testing accuracy is: \" , num_correct/(testing_vec.shape[0]))"
+   ]
   }
  ],
  "metadata": {
