--- a/multinomial-nb.ipynb
+++ b/multinomial-nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.corpus import stopwords\n",
-    "from spellchecker import SpellChecker\n",
+    "#from spellchecker import SpellChecker\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -54,19 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preprocessing\n",
-    "REGEX = True\n",
+    "REGEX = False\n",
     "SPELL_CHECK = False\n",
     "STOP_WORDS = False\n",
     "LEMMATIZE = False\n",
     "STEM = False\n",
     "\n",
+    "# full flag for all the latter\n",
+    "PROCESSED = False\n",
+    "\n",
     "# flag selection\n",
-    "PREDICT_TEST_SET = False"
+    "SAVE_TEST_RESULTS = True"
    ]
   },
   {
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,21 +199,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 85/15 Split - Basic Testing"
+    "# Generating Kaggle Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## NOTE: TO USE PREPROC, SET COMMENT_DATA['prep'] instead of comment_data['comments']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,27 +219,25 @@
    ],
    "source": [
     "#split data\n",
-    "clean_data = comment_data['comments'].to_numpy()\n",
+    "if PROCESSED:\n",
+    "    clean_data = comment_data['prep'].to_numpy()\n",
+    "    testing_data = test_data['prep'].to_numpy()\n",
+    "else:\n",
+    "    clean_data = comment_data['comments'].to_numpy()\n",
+    "    testing_data = test_data['comments'].to_numpy()\n",
+    "    \n",
     "clean_labels = comment_data['subreddits'].to_numpy()\n",
-    "# training_data = clean_data[:60000]\n",
-    "# testing_data = clean_data[60000:]\n",
-    "# training_labels = clean_labels[:60000]\n",
-    "# testing_labels = clean_labels[60000:]\n",
-    "\n",
     "training_data = clean_data\n",
     "training_labels = clean_labels\n",
-    "testing_data = test_data['comments'].to_numpy()\n",
     "\n",
     "print(training_data.shape)\n",
     "print(testing_data.shape)\n",
-    "print(training_labels.shape)\n",
-    "\n",
-    "# print(training_data[0])"
+    "print(training_labels.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,19 +309,8 @@
     "results = clf.predict(testing_vec)\n",
     "\n",
     "print(results.shape)\n",
-    "pd.DataFrame(results).to_csv(\"results.csv\")\n",
-    "\n",
-    "# r = np.array([0 for i in range(20)])\n",
-    "# w = np.array([0 for i in range(20)])\n",
-    "# count = 0\n",
-    "# for idx, result in enumerate(results):\n",
-    "#     l = labels.index(testing_labels[idx])\n",
-    "#     w[l] += 1\n",
-    "#     if result == testing_labels[idx]:\n",
-    "#         count += 1\n",
-    "#         r[l] += 1\n",
-    "# print(r/w)\n",
-    "# print(count/len(results))        "
+    "if SAVE_TEST_RESULTS:\n",
+    "    pd.DataFrame(results).to_csv(\"results.csv\")"
    ]
   },
   {
@@ -341,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +395,10 @@
    ],
    "source": [
     "# reformat\n",
-    "clean_data = comment_data['comments'].to_numpy()\n",
-    "clean_labels = comment_data['subreddits'].to_numpy()\n",
+    "if PROCESSED:\n",
+    "    clean_data = comment_data['prep'].to_numpy()\n",
+    "else:\n",
+    "    clean_data = comment_data['comments'].to_numpy()\n",
     "\n",
     "#pack tuple\n",
     "comments = []\n",
@@ -428,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -454,23 +437,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold  1  Validation accuracy is:  0.5731428571428572\n",
-      "Fold  1  Testing accuracy is:  0.5652857142857143\n",
-      "Fold  2  Validation accuracy is:  0.5735714285714286\n",
-      "Fold  2  Testing accuracy is:  0.575\n",
-      "Fold  3  Validation accuracy is:  0.555\n",
-      "Fold  3  Testing accuracy is:  0.5805714285714285\n",
-      "Fold  4  Validation accuracy is:  0.5724285714285714\n",
-      "Fold  4  Testing accuracy is:  0.5752857142857143\n",
-      "Fold  5  Validation accuracy is:  0.5727142857142857\n",
-      "Fold  5  Testing accuracy is:  0.5637142857142857\n"
+      "Fold  1  Validation accuracy is:  0.5708571428571428\n",
+      "Fold  1  Testing accuracy is:  0.5687142857142857\n",
+      "Fold  2  Validation accuracy is:  0.5778571428571428\n",
+      "Fold  2  Testing accuracy is:  0.5731428571428572\n",
+      "Fold  3  Validation accuracy is:  0.565\n",
+      "Fold  3  Testing accuracy is:  0.5771428571428572\n",
+      "Fold  4  Validation accuracy is:  0.5628571428571428\n",
+      "Fold  4  Testing accuracy is:  0.5661428571428572\n",
+      "Fold  5  Validation accuracy is:  0.5807142857142857\n",
+      "Fold  5  Testing accuracy is:  0.5757142857142857\n"
      ]
     }
    ],
@@ -535,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
