--- a/bernoulli-nb.ipynb
+++ b/bernoulli-nb.ipynb
@@ -232,7 +232,7 @@
     "        self.splits = []\n",
     "        \n",
     "    def generateSplits(self):\n",
-    "        #np.random.shuffle(self.data)\n",
+    "        np.random.shuffle(self.data)\n",
     "        \n",
     "        folds = []\n",
     "        splitPoint = self.data.shape[0] // (self.numFolds)  #breakpoint index jump\n",
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
